# pixelsort-cli

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  noxfile.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: codeql.yml  python-package.yml
pixelsorter/: __init__.py  __main__.py  image.py
src/pixelsort/: __init__.py  __main__.py  cli.py  direction.py  image.py
src/pixelsorter/: __init__.py  cli.py  direction.py  image.py
test/: conftest.py  test_image.py
