[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pixelsort-cli"
version = "0.1.7"
authors = [
    {name = "Ferdinand Theil", email = "f.p.theil@proton.me"},
]
description = "A Python CLI tool for sorting pixels in images."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'numpy>=1.24.3,<1.26.0',
    'scipy>=1.10.1,<1.12.0',
    'opencv-python~=4.7.0.72',
    'filetype~=1.2.0'
]

[project.urls]
"Homepage" = "https://github.com/Blotz/pixelsort-cli"
"Bug Tracker" = "https://github.com/Blotz/pixelsort-cli/issues"

[project.scripts]
pixelsort = "pixelsort.__main__:main"

[project.optional-dependencies]
test = [
    'pytest~=7.3.2'
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]
